# FrameFusion

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_qwen2vl_rope_deltas.py
framefusion/: ablation.py  interface.py  main.py  utils.py
framefusion/models/internvl/: modeling_internlm2.py  modeling_internvl_chat.py
framefusion/models/llava_next_video/: modeling_llava_next_video.py
framefusion/models/llava_video/: modeling_llava_video.py
framefusion/models/minicpmv/: modeling_minicpmv.py
framefusion/models/nvila/: llava_arch.py
framefusion/models/qwen2/: modeling_qwen2.py  modeling_qwen2_baseline.py  modeling_qwen2_vl.py  modeling_qwen2_vl_baseline.py
framefusion/models/qwenvl/: modeling_qwen2_vl.py
script/demo/: llava_video_compare.py
script/playground/: example_internvl.py  example_llava.py  example_minicpmv.py  example_nvila.py  example_qwen2vl.py
